<resources>
    <string name="app_name">UnlockLogger</string>
    <string name="label_unlock_history">解锁历史记录 (最新在前)</string>
    <string name="button_clear_logs">清空所有记录</string>
    <string name="content_delete_record">删除此条记录</string>
    
    <string name="category_file_paths">文件路径配置 (需要 Root 权限)</string>
    <string name="label_logging_switch">启用历史日志追加功能</string>
    <string name="pref_key_logging_enabled" translatable="false">logging_enabled_key</string>
    
    <string name="title_timestamp_path">时间戳覆写路径</string>
    <string name="summary_timestamp_path">每次解锁，Linux时间戳将覆写到此文件，需要Root权限。</string>
    <string name="dialog_title_timestamp_path">输入时间戳文件路径</string>
    <string name="pref_key_timestamp_path" translatable="false">timestamp_file_path_key</string>

    <string name="title_log_record_path">历史记录追加路径</string>
    <string name="summary_log_record_path">每次解锁，可读时间将追加到此文件，需要Root权限。\n</string>
    <string name="dialog_title_log_record_path">输入历史记录文件路径</string>
    <string name="pref_key_log_record_path" translatable="false">log_record_file_path_key</string>
	<string name="shell_usage_guide">源代码:\n\nhttps://github.com/Cyanide-zh/AndroidUnlockLogger\n\n💡 Shell 使用说明（长按可复制）：\n\n1. 开启持续定位 (默认 2秒)：\nam broadcast -a com.example.unlocklogger.ACTION_START_LOCATION com.example.unlocklogger/.receiver.NotificationReceiver\n\n2. 自定义间隔开启 (例如 5秒 = 5000ms)：\nam broadcast -a com.example.unlocklogger.ACTION_START_LOCATION --el interval 5000 com.example.unlocklogger/.receiver.NotificationReceiver\n\n3. 停止持续定位：\nam broadcast -a com.example.unlocklogger.ACTION_STOP_LOCATION com.example.unlocklogger/.receiver.NotificationReceiver\n\n4. 查看实时轨迹：\nlogcat -i |grep UnlockLoggerLocation\n\n5. 发通知：\nam broadcast -a com.example.unlocklogger.ACTION_SHELL_NOTIFICATION --es extra_message "$(date)" com.example.unlocklogger/.receiver.NotificationReceiver  -f 0x00000020 ; \n\n6. TTS：\ntts="$(date)" ; am broadcast -a com.example.unlocklogger.ACTION_TTS_SPEAK -n com.example.unlocklogger/com.example.unlocklogger.receiver.TtsReceiver  -f 0x00000020 --es tts_text "$tts" ; </string>
</resources>
