<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/settings_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/log_list_container"/>
        
    <LinearLayout
        android:id="@+id/log_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#EEEEEE"
        app:layout_constraintHeight_percent="0.4" app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_unlock_history"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        
        <Button
            android:id="@+id/button_clear_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_logs"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_usage_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#10000000" android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/shell_usage_guide"
            android:textColor="#444444" android:textSize="12sp"
            android:lineSpacingMultiplier="1.2"
            android:textIsSelectable="true" /> <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_logs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/> 

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
